examples/type_system/failing/148_constructor_pattern_arity_left_too_many.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E085: constructor-pattern arity mismatch (expects 1 field, pattern provides 3).

type EitherI = LeftI(Int) | RightI(Int)

fn main() {
    let x = LeftI(1)
    let _y = match x {
        LeftI(a, b, c) -> a,
        RightI(n) -> n,
    }
}
